[package]
name = "protorbit"
authors = ["matteac"]
description = "A simple HTTP library"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/matteac/protorbit"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
